--- a/package.json
+++ b/package.json
@@ -4,31 +4,31 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
-    "expo": "^51.0.34",
+    "expo": "^52.0.10",
     "expo-barcode-scanner": "~13.0.1",
     "expo-blur": "^14.0.1",
-    "expo-camera": "~15.0.16",
-    "expo-contacts": "~13.0.5",
-    "expo-image-picker": "^16.0.2",
-    "expo-location": "~17.0.1",
+    "expo-camera": "^16.0.6",
+    "expo-contacts": "^14.0.2",
+    "expo-image-picker": "^16.0.3",
+    "expo-location": "^18.0.2",
     "expo-permissions": "^14.4.0",
-    "expo-sensors": "~13.0.9",
-    "expo-sms": "^12.0.1",
-    "expo-status-bar": "~1.12.1",
-    "react": "^18.2.0",
-    "react-native": "^0.74.6",
+    "expo-sensors": "^14.0.1",
+    "expo-sms": "^13.0.0",
+    "expo-status-bar": "^2.0.0",
+    "react": "^18.3.1",
+    "react-native": "^0.76.2",
     "react-native-qrcode-svg": "^6.3.2"
   },
   "devDependencies": {
